[gd_scene load_steps=11 format=2]

[ext_resource path="res://flameblade_main _menu_bg/1flameblade azure final1.png" type="Texture" id=1]
[ext_resource path="res://perfect-dos-vga-437/Perfect DOS VGA 437 Win.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://new/Main_Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 308.0
margin_bottom = 168.0
custom_constants/separation = 60

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 296.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.756863, 0.729412, 0.847059, 1 )
custom_fonts/font = SubResource( 1 )
text = "FLAMEBLADE AZURE"
align = 1

[node name="Separation" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 296.0
margin_bottom = 76.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 308.0
margin_bottom = 168.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 93.0
margin_bottom = 156.0
alignment = 2

[node name="btnRESUME" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 93.0
margin_bottom = 52.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_constants/hseparation = 8
custom_fonts/font = SubResource( 2 )
text = "RESUME"
flat = true

[node name="RESUME" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/btnRESUME"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_color_shadow = Color( 0.529412, 0.54902, 0.607843, 1 )
custom_fonts/font = SubResource( 7 )
text = "RESUME"
align = 1
valign = 1

[node name="btnNEWGAME" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 93.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_fonts/font = SubResource( 3 )
text = "NEW GAME"
flat = true

[node name="NEWGAME" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/btnNEWGAME"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_color_shadow = Color( 0.529412, 0.54902, 0.607843, 1 )
custom_fonts/font = SubResource( 7 )
text = "NEW GAME"
align = 1
valign = 1

[node name="btnLOADGAME" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 93.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_fonts/font = SubResource( 4 )
text = "LOAD GAME"
flat = true

[node name="LOADGAME" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/btnLOADGAME"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_color_shadow = Color( 0.529412, 0.54902, 0.607843, 1 )
custom_fonts/font = SubResource( 7 )
text = "LOAD GAME"
align = 1
valign = 1

[node name="btnOPTION" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 93.0
margin_bottom = 130.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_fonts/font = SubResource( 5 )
text = "OPTION"
flat = true

[node name="OPTION" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/btnOPTION"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_color_shadow = Color( 0.529412, 0.54902, 0.607843, 1 )
custom_fonts/font = SubResource( 7 )
text = "OPTION"
align = 1
valign = 1

[node name="btnQUIT" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 93.0
margin_bottom = 156.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "QUIT"
flat = true

[node name="QUIT" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/btnQUIT"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0862745, 0.207843, 0.486275, 1 )
custom_colors/font_color_shadow = Color( 0.529412, 0.54902, 0.607843, 1 )
custom_fonts/font = SubResource( 7 )
text = "QUIT"
align = 1
valign = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnRESUME" to="." method="_on_btnRESUME_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnNEWGAME" to="." method="_on_btnNEWGAME_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnLOADGAME" to="." method="_on_btnLOADGAME_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnOPTION" to="." method="_on_btnOPTION_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btnQUIT" to="." method="_on_btnQUIT_pressed"]
